# tennis-robot

./: .gitignore  README.md
projects/01_obstacle_avoiding_robot/: README.md
projects/01_obstacle_avoiding_robot/cad/print/: V1_Chassis.3mf
projects/01_obstacle_avoiding_robot/cad/step/: V2_Chassis.step
projects/01_obstacle_avoiding_robot/firmware/ObjectAvoider/: CMakeLists.txt  ObjectAvoider.ioc
projects/01_obstacle_avoiding_robot/firmware/ObjectAvoider/Core/EncoderTesting/Src/: stm32f4xx_hal_msp.c
projects/01_obstacle_avoiding_robot/firmware/ObjectAvoider/Core/ObjectAvoidingRobot/Inc/: main.h
projects/01_obstacle_avoiding_robot/firmware/ObjectAvoider/Core/ObjectAvoidingRobot/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
projects/01_obstacle_avoiding_robot/firmware/ObjectAvoider/cmake/stm32cubemx/: CMakeLists.txt
projects/01_obstacle_avoiding_robot/firmware/STM32_ObjectAvoider/: .mxproject  CMakeLists.txt
projects/01_obstacle_avoiding_robot/firmware/STM32_ObjectAvoider/Core/EncoderTesting/Src/: main.c  stm32f4xx_it.c
projects/01_obstacle_avoiding_robot/firmware/STM32_ObjectAvoider/Core/IMUTesting/Inc/: main.h
projects/01_obstacle_avoiding_robot/firmware/STM32_ObjectAvoider/Core/IMUTesting/Src/: main.c
projects/01_obstacle_avoiding_robot/firmware/STM32_ObjectAvoider/Core/Testing/Inc/: main.h
projects/01_obstacle_avoiding_robot/firmware/STM32_ObjectAvoider/Core/Testing/Src/: main.c  stm32f4xx_it.c
projects/01_obstacle_avoiding_robot/firmware/STM32_ObjectAvoider/Core/V1_BasicAvoidance/Inc/: stm32f4xx_it.h
projects/01_obstacle_avoiding_robot/firmware/STM32_ObjectAvoider/Core/V1_BasicAvoidance/Src/: main.c
projects/01_obstacle_avoiding_robot/firmware/STM32_ObjectAvoider/Core/V2_WithEncoders/Inc/: main.h
projects/01_obstacle_avoiding_robot/firmware/STM32_ObjectAvoider/Core/V2_WithEncoders/Src/: debug_uart.c  encoder.c  main.c  motor.c  pid.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  ultrasonic.c
projects/01_obstacle_avoiding_robot/firmware/obstacle_avoider_stm32/: .cproject  .project
projects/01_obstacle_avoiding_robot/firmware/obstacle_avoider_stm32/Inc/: lcd.h
projects/01_obstacle_avoiding_robot/firmware/obstacle_avoider_stm32/Src/: 01led_toggle.c  02external_button.c  03SPI.c  03button_interrupt.c  04systick.c  05uart_transmit.c  06ultrasonic_sensor.c  07pwm.c  08object_avoidant_robot.c  lcd.c  syscalls.c
projects/01_obstacle_avoiding_robot/firmware/obstacle_avoider_stm32/drivers/Inc/: stm32f446xx.h  stm32f446xx_gpio_driver.h  stm32f446xx_i2c_driver.h  stm32f446xx_spi_driver.h  stm32f446xx_systick_driver.h  stm32f446xx_usart_driver.h
projects/01_obstacle_avoiding_robot/firmware/obstacle_avoider_stm32/drivers/Src/: stm32f446xx_gpio_driver.c  stm32f446xx_i2c_driver.c  stm32f446xx_spi_driver.c  stm32f446xx_systick_driver.c  stm32f446xx_usart_driver.c
projects/02_computer_vision/: README.md  ball_detection.py  debug_server.py  frame_debug.py  main.py  pyproject.toml  send_debug_test.py  uart_send.py
