[project]
name = "02-computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "opencv-python>=5.0.0.93",
    "opencv-stubs>=0.1.3",
    "pillow>=10.4.0",
    "pyserial>=3.5",
    "sockets>=1.0.0",
    "wiringpi>=2.60.1",
]
